CSS bugfixes for IE7: header bar width and message preview wrapping.
git-svn-id: file:///home/dabosq/lichen/svn/trunk@60 bb28ca92-9e36-0410-91a4-d1cafbab33cc

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -31,7 +31,7 @@ Distributed under the GNU General Public License
 
 #list-wrapper table { clear: both; table-layout: fixed; width: 100%; }
 
-.subject, .sender, .date { white-space: nowrap; overflow: hidden; }
+.subject, .sender, .size, .date { white-space: nowrap; overflow: hidden; }
 
 .mcol-checkbox { width: 22px; }
 .mcol-flag { width: 26px; }
